[gd_scene load_steps=2 format=3 uid="uid://d2741rujsx7yp"]

[ext_resource type="Script" path="res://player_store.gd" id="1_k4ykq"]

[node name="PlayerStore" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k4ykq")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -88.0
offset_right = 126.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Equip Tools"
horizontal_alignment = 1

[node name="Resume" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="Wall Jump" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Wall Jump: Cost = 200"

[node name="Blast" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Blast: Cost = 200"

[node name="Smash" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Smash: Cost = 200"

[connection signal="pressed" from="Panel/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Wall Jump" to="." method="_on_wall_jump_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Blast" to="." method="_on_blast_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Smash" to="." method="_on_smash_pressed"]
